<resources>
    <string name="app_name">pixiti</string>

    <string name="label_search">Search</string>
    <string name="label_categories">Categories</string>
    <string name="label_images">Images</string>

    <string name="label_category_animals">Animals</string>
    <string name="label_category_backgrounds">Backgrounds</string>
    <string name="label_category_buildings">Buildings</string>
    <string name="label_category_business">Business</string>
    <string name="label_category_computer">Computer</string>
    <string name="label_category_education">Education</string>
    <string name="label_category_fashion">Fashion</string>
    <string name="label_category_feelings">Feelings</string>
    <string name="label_category_food">Food</string>
    <string name="label_category_health">Health</string>
    <string name="label_category_industry">Industry</string>
    <string name="label_category_music">Music</string>
    <string name="label_category_nature">Nature</string>
    <string name="label_category_people">People</string>
    <string name="label_category_places">Places</string>
    <string name="label_category_religion">Religion</string>
    <string name="label_category_science">Science</string>
    <string name="label_category_sports">Sports</string>
    <string name="label_category_transportation">Transportation</string>
    <string name="label_category_travel">Travel</string>

    <string name="label_detail_info_resolution">Resolution</string>
    <string name="label_detail_info_created">Created</string>
    <string name="label_detail_info_views">Views</string>
    <string name="label_detail_info_downloads">Downloads</string>

    <string name="desc_share_image_message">Hello, I want to share this from Pixabay with you;</string>
    <string name="desc_share_with">Share With</string>
    <string name="desc_detail_info_resolution" translatable="false">%1$d x %2d</string>
    <string name="desc_search_images">Search Images</string>

    <string name="desc_list_load_fail">Images couldn\'t load</string>
    <string name="label_list_retry">Retry</string>
    <string name="desc_permission_denial_title">To save this photo, we need permission to access media on your device</string>
    <string name="desc_permission_denial_detail">Storage permissions can be enabled under Settings > Apps > Pixiti > Permissions.</string>
    <string name="desc_permission_error">An error occurred while getting permissions!</string>
    <string name="desc_permission_missing_permission">All permissions are not granted!</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_go_to_settings">Go To App Settings</string>
    <string name="label_settings">Settings</string>
    <string name="label_filter">Filter</string>
    <string name="label_about">About pixiti</string>
    <string name="label_day_night">Set Night Mode</string>
    <string name="label_about_attribution" translatable="false"><div>Icons made by <a href="https://www.flaticon.com/authors/gregor-cresnar" title="Gregor Cresnar">Gregor Cresnar</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div> \n<div>Icons made by <a href="https://www.flaticon.com/authors/smalllikeart" title="smalllikeart">smalllikeart</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div> \n<div>Icons made by <a href="https://www.flaticon.com/authors/geotatah" title="geotatah">geotatah</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div> \n<div>Icons made by <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div> \n<div>Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div> \n<div>Icons made by <a href="https://www.flaticon.com/authors/eucalyp" title="Eucalyp">Eucalyp</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div> \n<div>Icons made by <a href="https://www.flaticon.com/authors/srip" title="srip">srip</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div> \n<div>Icons made by <a href="https://www.flaticon.com/authors/pixel-perfect" title="Pixel perfect">Pixel perfect</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div></string>
    <string name="label_about_icons_title">Icons on this app from</string>
    <string name="label_about_images_title">Images on this app from</string>
    <string name="label_about_pixabay_url" translatable="false"><a href="https://www.pixabay.com/" title="Pixabay">www.pixabay.com</a></string>
    <string name="label_about_app_title" translatable="false">Pixiti 2021</string>

    <string name="desc_download_success">Image Saved</string>
    <string name="desc_image_download_error">An error occurred while saving image!</string>

    <string name="label_filter_type">Type</string>
    <string name="label_filter_filter">Filter</string>
    <string name="label_filter_orientation">Image Orientation</string>
    <string name="label_filter_safe_Search">SafeSearch</string>
    <string name="desc_search_no_images">No images found</string>
    <string name="label_back_search">Back to Search</string>

</resources>