<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?android:attr/actionBarSize"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/padding_medium_20">

    <TextView
        style="@style/FilterTextView"
        android:text="@string/label_filter_type" />

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/flexbox_layout_image_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_small"
        app:flexWrap="wrap"
        app:justifyContent="flex_start" />

    <TextView
        style="@style/FilterTextView"
        android:text="@string/label_filter_filter" />

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/flexbox_layout_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_small"
        app:flexWrap="wrap"
        app:justifyContent="flex_start" />

    <TextView
        style="@style/FilterTextView"
        android:text="@string/label_filter_orientation" />

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/flexbox_layout_orientation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_small"
        app:flexWrap="wrap"
        app:justifyContent="flex_start" />

    <TextView
        style="@style/FilterTextView"
        android:text="@string/label_filter_safe_Search" />

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/flexbox_layout_safe_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_small"
        app:flexWrap="wrap"
        app:justifyContent="flex_start" />

</LinearLayout>