<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding_medium_20"
    android:background="@drawable/drawable_activity_background">

    <TextView
        android:id="@+id/text_view_app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_about_app_title"
        android:textColor="@color/textColorDay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_pixabay_attribute_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_about_images_title"
        android:textColor="@color/textColorDay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_app_title" />

    <ImageView
        android:id="@+id/image_view_pixabay_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/pixabay_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_pixabay_attribute_title" />

    <TextView
        android:id="@+id/text_view_pixabay_website"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_about_pixabay_url"
        android:textColor="@color/textColorDay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_view_pixabay_logo" />

    <TextView
        android:id="@+id/text_view_flaticon_attribute_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_about_icons_title"
        android:textColor="@color/textColorDay"
        app:layout_constraintBottom_toTopOf="@id/text_view_flaticon_attribute"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_pixabay_website" />

    <TextView
        android:id="@+id/text_view_flaticon_attribute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/label_about_attribution"
        android:textColor="@color/textColorDay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>